# modernizer-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
smoke_test_env/: LegacyService.java
src/modernizer/: config.py  main.py
src/modernizer/agent/: llm.py
src/modernizer/engine/: compiler.py  refactor.py  sandbox.py
src/modernizer/strategies/: reactive.py
tests/: smoke_test.py  test_main.py
