[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modernizer-cli"
version = "0.1.0"
description = "Neuro-Symbolic Agent for Legacy Java to Spring Boot Migration"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.3",
    "langchain-anthropic>=0.1.6",
    "python-dotenv==1.0.0"
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller"
]

[project.scripts]
modernizer = "modernizer.main:app"

[tool.setuptools.packages.find]
where = ["src"]
